# mekaHandController

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/: components.md
components/motor_driver/: CMakeLists.txt
components/motor_driver/include/: motor_driver.hpp
components/motor_driver/src/: motor_driver.cpp
components/sensor_driver/: CMakeLists.txt
components/sensor_driver/include/: adc.hpp  encoder.hpp  imu.hpp
components/usb_driver/: CMakeLists.txt  usb.md
components/usb_driver/include/: usb_driver.hpp  usb_driver_callbacks.h
components/usb_driver/src/: usb_driver.cpp  usb_driver_callbacks.c
include/: config.h  sensors.hpp
main/: CMakeLists.txt  idf_component.yml  main.cpp  motor_control.hpp
main/tasks/: logger_task.cpp  logger_task.hpp  motor_task.cpp  motor_task.hpp  sensor_task.cpp  sensor_task.hpp
